image Docker sur DockerHub GITHUB_SHA

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,20 +1,29 @@
-name: Build App
+name: Build and Push Docker Image
 
 on:
-    push:
-        branches:
-        - main
+  push:
+    branches:
+      - master
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-        - uses: actions/checkout@v2
-        - name: build-push
-          uses: docker/build-push-action@v1
-          with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-            registry: docker.io
-            repository: erwan5913/cd
-            tag_with_sha: true
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      # Checkout the repository code
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Log in to DockerHub using secrets
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Build the Docker image
+      - name: Build Docker image
+        run: docker build -t <erwan5913>/cd:${{ github.sha }} .
+
+      # Push the Docker image to DockerHub
+      - name: Push Docker image
+        run: docker push <erwan5913>/cd:${{ github.sha }}
