--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       # Checkout the repository code
       - name: Checkout code
-        - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       # Log in to DockerHub using secrets
       - name: Log in to DockerHub
