--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,8 @@ jobs:
       # Checkout the repository code
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          node-version: '20'  # Forcer Node.js 20 (optionnel)
 
       # Log in to DockerHub using secrets
       - name: Log in to DockerHub
