--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.organization=spiralxi
-sonar.projectKey=erwan1_cd
+sonar.organization=erwan1
+sonar.projectKey=spiralxi
  
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
