--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.organization=erwan1
+sonar.organization=erwan1key
 sonar.projectKey=Spiralxi_cd
  
 # relative paths to source directories. More details and properties are described
