--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,8 +18,8 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@v2
         with:
           args: >
-            -Dsonar.projectKey=61b9a74e590b09098a0202520fd909f9c637eb7a
-            -Dsonar.organization=Erwan
+            -Dsonar.projectKey=Spiralxi_cd
+            -Dsonar.organization=erwan1key
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       
