--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@v0.4.0
         with:
-          image-ref: 'docker.io/erwan5913/cd'
+          image-ref: 'erwan5913/cd'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
