--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,11 +31,14 @@ jobs:
     steps:
       # Checkout the repository code
       - name: Checkout code
-        uses: actions/checkout@v4  # Version déjà à jour, rien à ajouter ici
+        uses: actions/checkout@v4
 
       # Log in to DockerHub using secrets
       - name: Log in to DockerHub
-        uses: docker/login-action@v3  # Vous avez déjà la version à jour
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       # Build the Docker image
       - name: Build Docker image
@@ -49,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@v0.4.0
+        uses: aquasecurity/trivy-action@v0.11.0  # Utilisation de la version correcte
         with:
           image-ref: 'erwan5913/cd'
           format: 'table'
