--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,21 +40,24 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build the Docker image
+      # Build the Docker image and tag it with both the commit SHA and 'latest'
       - name: Build Docker image
-        run: docker build -t erwan5913/cd:${{ github.sha }} .
+        run: |
+          docker build -t erwan5913/cd:${{ github.sha }} -t erwan5913/cd:latest .
 
-      # Push the Docker image to DockerHub
+      # Push the Docker image to DockerHub with both tags
       - name: Push Docker image
-        run: docker push erwan5913/cd:${{ github.sha }}
+        run: |
+          docker push erwan5913/cd:${{ github.sha }}
+          docker push erwan5913/cd:latest
 
   trivy:
     runs-on: ubuntu-latest
     steps:
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master  # Utiliser la version master
+        uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'erwan5913/cd'
+          image-ref: 'erwan5913/cd:latest'  # Utilisation du tag 'latest'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
